--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Welcome IDM Team to Dockerizing Jenkins Pipeline Tutorial</h1>
+<h1>Hi IDM Team to Dockerizing Jenkins Pipeline Tutorial</h1>
 <p>Triggering a Jenkins build from a push to Github.</p>
 
 
